# ClassTracker

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .prettierrc  .ruff.toml  Dockerfile  discord-tracker.code-workspace  docker-compose-init.yml  docker-compose-prod.yml  docker-compose.yml  eslint.config.ts  package-lock.json  package.json  pyproject.toml  run-docker-compose.sh  tsconfig.json
class_tracker/: admin.py  apps.py  jobs.py  models.py  urls.py
class_tracker/global_search/: __init__.py  navigator.py  parser.py  typedefs.py  types.py  util.py
class_tracker/migrations/: 0001_squashed_0041_day_alter_instructionentry_unique_together_and_more.py  0042_alter_course_subject_and_more.py  0043_alter_instructionentry_end_date_and_more.py  0044_coursesection_number.py  0045_alter_coursesection_course_alter_coursesection_term.py  0046_rename_room_number_instructionentry_room_and_more.py  0047_alter_coursesection_unique_together.py  0048_alter_instructionentry_unique_together.py  0049_contact_phonenumber_classalert.py  0050_contact_is_contact_by_phone_contact_watched_sections.py  0051_rename_phonenumber_contactinfo.py  0052_recipient_remove_contact_watched_sections_and_more.py  0053_alter_recipient_watched_sections.py  0054_globalsettings.py
class_tracker/tests/: test_parse_html_helpers.py
client/: index.tsx  types.ts
course_searcher/: admin.py  apps.py  interfaces.py  jobs.py  models.py  templates.py  urls.py  views.py
discord_tracker/: admin.py  apps.py  decorators.py  models.py  urls.py
server/: templates.py  urls.py  views.py
(+221 files in other folders)
